refactor events part 2